stylesheets/styles.css
@import url(http://fonts.googleapis.com/css?family=Lato:400,700);

.bold{
  font-weight: bold;
}

body{
  font-family: 'Lato', sans-serif;
  
}

header{
  padding-top: 10px;
  padding-bottom: 10px;
  min-width: 500px;
  background-color: #f5f5f5;
  border-bottom: 1px solid #e5e5e5;
  height:25px;
  line-height: 25px;
}

a{
  text-decoration: none;
}

section.wrapper a{
  color: #ffb54f;
  font-size: 22px;
}

header a{
  color: black;
}

header .container{
  max-width: 980px;
  margin-right: auto;
  margin-left: auto;
}

header .container h1{
  font-size: 20px;
  float:left;
}

header .container ul{
  float:right;
}

header .container ul li{
  margin-right: 10px;
  display: inline-block;
  font-size: 16px;
}

header .container ul li.active a{
  padding-bottom: 1px;
  border-bottom: 2px solid;
}

section.wrapper .section1 {
  width:100%;
  background-color: #160625;
  color:white;
  min-height: 300px;
  margin:auto;
}

section.wrapper .section1 h1{
  font-weight: 300;
  font-size: 42px;
  line-height: 1.2em;
}

section.wrapper .section1 .content{
  width: 800px;
  margin: auto;
  padding-top: 100px;
}

section.markdown-body{
  width:600px;
  margin:auto;
  padding-top: 10px;
}

footer{
  text-align: center;
  padding-top: 10px;
}

footer small{
  font-size: 12px;
}

section.wrapper .section2{
  width: 100%;
  background: #f2f2f2;
  border-top: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
  overflow: hidden;
  z-index: 1;
  position: relative;
}

.separator{
  background-color: #ffb54f;
  width:100%;
  height:10px;
}

.highlight-module{
  list-style-type: none;
  display: table-cell;
  padding: 40px 14px 30px;
  text-align: center;
  margin-top: 10px;
  font-size: 14px;
  line-height: 1.5em;
}

.highlight-module h2{
  padding-top: 10px;
  padding-bottom: 10px;
}

.highlight-module .mega-octicon{
  font-size: 70px;
  width: 70px;
  height: 70px;
}

